--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "charlie-hubot",
   "version": "0.0.0",
   "private": true,
-  "author": "HUBOT_SLACK_TOKEN=xoxb-179106651346-pFkddiewsxeT7ZRWjxT2G56C ./bin/hubot --adapter slack",
+  "author": "Chris de Steuben",
   "description": "Responds to Burner's Slack integration",
   "dependencies": {
     "ejs": "^2.5.6",
