--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^2.5.6",
     "hubot": "^2.19.0",
     "hubot-diagnostics": "0.0.1",
+    "hubot-encourage": "^1.0.1",
     "hubot-friendly": "0.0.2",
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.2.0",
